--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,8 @@
 		  <h2>Cnuasach</h2>
 		  <nav>
 			  <ul>
-				  <li> <a  href=
-						  "{{site.baseurl}}/">Baile</a> </li>
-				  <li> <a  href=
-						  "{{site.baseurl}}/cnuas.html">Cnuas</a> </li>
+				  <li> <a  href= "{{site.baseurl}}/index.html">Baile</a> </li>
+				  <li> <a  href= "{{site.baseurl}}/cnuas.html">Cnuas</a> </li>
 
 			  </ul>
 
