--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,15 +7,14 @@
   <body>
 	  <header>
 		  <h2>Cnuasach</h2>
-		  <nav>
-			  <ul>
-				  <li> <a  href= "{{site.baseurl}}/index.html">Baile</a> </li>
-				  <li> <a  href= "{{site.baseurl}}/cnuas.html">Cnuas</a> </li>
-
-			  </ul>
-
-		  </nav>
+		  {% include nav.html}
 	  </header>
 	  {{content}}
+<footer>
+
+	  {% include nav.html}
+</footer>
+
+
   </body>
 </html>
