--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
   <body>
 	  <header>
 		  <h2>Cnuasach</h2>
-		  {% include nav.html}
+		  {% include nav.html %}
 	  </header>
 	  {{content}}
 <footer>
 
-	  {% include nav.html}
+	  {% include nav.html %}
 </footer>
 
 
