--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <ul>
     <li> <a  href= "{{site.baseurl}}/index.html">Baile</a> </li>
     <li> <a  href= "{{site.baseurl}}/cnuas.html">Cnuas</a> </li>
-
+<li> <a  href= "{{site.baseurl}}/focail.html">Focail</a> </li>
   </ul>
 
 </nav>
