--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cnuasach Theileann</title>
+<link rel="stylesheet" href="{{site.baseurl}}/css/common.css">
   </head>
   <body>
 	  <header>
