--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,14 @@
   <body>
 	  <header>
 		  <h2>Cnuasach</h2>
-		  {% include nav.html %}
+		  {% include nav.html navclass='nav-top' %}
 	  </header>
     <hr>
 	  {{content}}
 <hr>
 <footer>
 
-	  {% include nav.html %}
+	  {% include nav.html navclass='nav-bottom' %}
 </footer>
 
 
