--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 
 <li> <a  href= "{{site.baseurl}}/focail.html" class="{% if page.url == '/focail.html'  %}current{% endif %}">Focail</a> </li>
 <li> <a  href= "{{site.baseurl}}/cnuas.html" class="{% if page.url == '/cnuas.html'  %}current{% endif %}">Cnuas</a> </li>
-<li> <a  href= "/cnuas-teileann/{{site.baseurl}}/nposts.html" class="{% if page.url == '/nposts.html'  %}current{% endif %}">Posts</a> </li>
+<li> <a  href= "{{site.baseurl}}/nposts.html" class="{% if page.url == '/nposts.html'  %}current{% endif %}">Posts</a> </li>
 
   </ul>
 
