--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,10 +2,10 @@
   <ul class="{{include.navclass}}">
     <li> <a  href= "{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'  %}current{% endif %}">Baile</a> </li>
 
-<li> <a  href= "{{site.baseurl}}/focail.html" class="{% if page.url == '/focail.html'  %}current{% endif %}">Focail</a> </li>
+<li> <a  href= "{{site.baseurl}}/focail.html" class="{% if page.url == '/focail.html'  %}current{% endif %}">Rud</a> </li>
 <li> <a  href= "{{site.baseurl}}/cnuas.html" class="{% if page.url == '/cnuas.html'  %}current{% endif %}">Cnuas</a> </li>
 <li> <a  href= "{{site.baseurl}}/nposts.html" class="{% if page.url == '/nposts.html'  %}current{% endif %}">Posts</a> </li>
-
+<li> <a  href= "{{site.baseurl}}/neach.html" class="{% if page.url == '/neach.html'  %}current{% endif %}">Focail</a> </li>
   </ul>
 
 </nav>
