--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,9 @@
   <ul class="{{include.navclass}}">
     <li> <a  href= "{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'  %}current{% endif %}">Baile</a> </li>
 <li> <a  href= "{{site.baseurl}}/neach.html" class="{% if page.url == '/neach.html'  %}current{% endif %}">Focail</a> </li>
+<li> <a  href= "{{site.baseurl}}/focloir.html" class="{% if
+		page.url == '/focloir.html'  %}current{%
+		endif %}">Foclóir</a> </li>
   </ul>
 
 </nav>
