--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <nav>
   <ul class="{{include.navclass}}">
     <li> <a  href= "{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'  %}current{% endif %}">Baile</a> </li>
+	<li> <a  href= "{{site.baseurl}}/reamhra.html" class="{% if page.url == '/reamhra.html'  %}current{% endif %}">Réamhrá</a> </li>  
 <li> <a  href= "{{site.baseurl}}/neach.html" class="{% if page.url == '/neach.html'  %}current{% endif %}">Focail</a> </li>
 <li> <a  href= "{{site.baseurl}}/focloir.html" class="{% if
 		page.url == '/focloir.html'  %}current{%
