--- a/_layouts/eolas.html
+++ b/_layouts/eolas.html
@@ -10,7 +10,7 @@
 		  <h1>Cnuasach Focal as Teileann</h1>
 		  {% include nav.html navclass='nav-top' %}
 	  </header>
-    <img src="{{site.baseurl}}/img/drch9.jpg">
+    <img src="{{site.baseurl}}/img/caisleán-1.jpg">
     <hr>
 	  {{content}}
 <hr>
