--- a/_layouts/npagelayout.html
+++ b/_layouts/npagelayout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cnuasach Theileann</title>
-<link rel="stylesheet" href="{{site.baseurl}}/css/common.css">
+<link rel="stylesheet" href="{{site.baseurl}}/css/style1.css">
   </head>
   <body>
 	  <header>
