--- a/_includes/npages.html
+++ b/_includes/npages.html
@@ -1,4 +1,4 @@
 
 <h1>Seanchaint Theileann - blúiríní</h1>
-<nav><a  href= "{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'  %}current{% endif %}">Baile</a></nav>
+<nav><a  href= "{{site.baseurl}}/index.html" class="baile">Baile</a></nav>
 <p><img src="{{site.baseurl}}/img/abhainn-9.jpg"><p>
