--- a/css/style1.css
+++ b/css/style1.css
@@ -1,8 +1,8 @@
 body {
 margin-top:40px;
 margin-right:150px;
-margin-left:30px;
-background-color: darkslategrey;
+margin-left:60px;
+background-color: brown;
 color: azure;
 font-size: 1.1em;
 }
@@ -14,4 +14,7 @@ h1 {
 }
 .colorful {
     color: orange;
+}
+.baile {
+  color: yellow;
 }
