--- a/css/style1.css
+++ b/css/style1.css
@@ -2,8 +2,8 @@ body {
 margin-top:40px;
 margin-right:150px;
 margin-left:60px;
-background-color: brown;
-color: azure;
+background-color: darkslategrey;
+color: #572c25;
 font-size: 1.1em;
 }
 h1 {
