--- a/css/style1.css
+++ b/css/style1.css
@@ -3,7 +3,7 @@ margin-top:40px;
 margin-right:150px;
 margin-left:60px;
 background-color: darkslategrey;
-color: #572c25;
+color: #ffffcc;
 font-size: 1.1em;
 }
 h1 {
