--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,10 +2,11 @@
  <ul class="{{include.navclass}}">
 <li> <a  href= "{{site.baseurl}}/index.html" class="{% if page.url == '/index.html'  %}current{% endif %}">Baile</a> </li>
 <li> <a  href= "{{site.baseurl}}/para.html" class="{% if page.url == '/para.html'  %}current{% endif %}">An Leabhar</a> </li>
-<li> <a  href= "{{site.baseurl}}/reamhra.html" class="{% if page.url == '/reamhra.html'  %}current{% endif %}">Réamhrá</a> </li> 
+<li> <a  href= "{{site.baseurl}}/reamhra.html" class="{% if page.url == '/reamhra.html'  %}current{% endif %}">Réamhrá</a> </li>
   <li> <a  href= "{{site.baseurl}}/neach2.html" class="{% if page.url == '/neach2.html'  %}current{% endif %}">Focail 1</a> </li>
 <li> <a  href= "{{site.baseurl}}/neach.html" class="{% if page.url == '/neach.html'  %}current{% endif %}">Focail 2</a> </li>
 <li> <a  href= "{{site.baseurl}}/focloir.html" class="{% if page.url == '/focloir.html'  %}current{% endif %}">Foclóir</a> </li>
+<li> <a  href= "{{site.baseurl}}/people.html" class="{% if page.url == '/people.html'  %}current{% endif %}">Daoine</a> </li>
 </ul>
 
 </nav>
